--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Yarnom'Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href=" {{url_for('static',filename='css/main.css')}}">
 </head>
 <body>
