--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -30,7 +30,7 @@
                             <span>|</span>
                             <a href="/modifyPost/{{ post.pid }}">修改</a>
                             <span>|</span>
-                            <a name=/deletePost/{{ post.pid }}>删除</a>
+                            <a href=/deletePost/{{ post.pid }}>删除</a>
                         </td>
                     </tr>
                     {% endfor%}
