[push][3.2.8] Markdown代码区支持

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block applicationMain %}
+<div id="like_button_container"></div>
 <div class="page-home">
     <div class="application-main">
         <div class="mainBox">
@@ -95,6 +96,8 @@
                 txt = txt.replace(/<div>#### (.+?)<\/div>/ig,"<h4>$1</h4>");
                 txt = txt.replace(/<div>##### (.+?)<\/div>/ig,"<h5>$1</h5>");
                 txt = txt.replace(/<div>###### (.+?)<\/div>/ig,"<h6>$1</h6>");
+
+                txt = txt.replace(/<div>```<\/div><div>(.+?)<\/div><div>```<\/div>/ig,"<div class='highlight-code'><pre>$1</pre></div>");
                 $(this).html(txt)
             });
             $(".mobile-menu-li").click(function(){
