--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -529,6 +529,8 @@ body {
     .page-home .application-main .mainBox .post img{
         max-width:100%;
     }
+
+
     .page-home .application-main .mainBox .time {
         font-size: 14px;
         color: #aaa;
@@ -555,6 +557,22 @@ body {
         font-size:16px;
         color:#3d3d3f;
         line-height: 1.7em;
+    }
+    .page-home .application-main .mainBox .content .highlight-code{
+        /* background: rgb(40, 44, 52); */
+        background-color: #f7f7f9;
+        border: 1px solid #e1e1e8;
+        border-radius: 5px;
+        margin-top: 25px;
+        margin-left: -30px;
+        margin-right: -30px;
+        margin-bottom: 25px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .page-home .application-main .mainBox .content .highlight-code pre{
+        padding:0.3em 0;
+        font-size: 14px;
     }
     .page-home .application-main .mainBox .content h1{
         font-size:24px;
@@ -860,6 +878,23 @@ body {
         line-height:24px;
         letter-spacing: 1px;
         min-height:500px;
+        width: 100%;
+    }
+    .page-post .application-main .post .content .highlight-code{
+        /* background: rgb(40, 44, 52); */
+        background-color: #f7f7f9;
+        border: 1px solid #e1e1e8;
+        border-radius: 5px;
+        margin-top: 25px;
+        margin-left: -30px;
+        margin-right: -30px;
+        margin-bottom: 25px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .page-post .application-main .post .content .highlight-code pre{
+        padding:0.3em 0;
+        font-size: 14px;
     }
     .page-post .application-main .post .content h1{
         font-size:24px;
