--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,9 @@
 
     </div>
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
+    <!-- <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="{{url_for('static',filename='js/like_button.js')}}"></script> -->
 </body>
 
 </html>
