--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -33,4 +33,10 @@
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function(){
+         $(".nav-notes-phone img").hide();
+    });
+
+</script>
 {% endblock %}
