--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,49 +1,180 @@
-{% extends 'base.html' %}
-
-{% block header %}
-{% endblock %}
+{% extends 'admin-base.html' %}
 
 {% block applicationMain %}
-<div class="page-admin">
+<div class="page-home">
     <div class="application-main">
-        {% include 'admin-nav.html' %}
-        <div class="content-posts">
-            <div class="title">
-                <h1>文章管理</h1>
-                <p>你可以通过下面的表格对数据库中文章进行简单的管理。</p>
-                <p>当然，你同样可以：<a href="/new-post">新建一篇文章</a></p>
+        <div class="basic-data-title">
+            <div class="title-box">
+                <div class="title">基础数据管理</div>
+                <div class="subtitle">Basic Data</div>
             </div>
-            <table>
-                <tbody>
-                    {% for post in posts%}
-                    <tr>
-                        <td>{{ post.title }}</td>
-                        <td>{{ post.time }} </td>
-                        {% if post.tag %}
-                            <td>{{ post.tag }}</td>
-                        {% else %}
-                        <td>默认</td>
-                        {% endif %}
+            <div class="new-post-box">
+                <a class="new-post" href="/new-post">
+                    <img src="{{ url_for('static',filename='img/添加 (1).svg') }}" alt="">
+                    新建一篇文章
+                </a>
+            </div>
+        </div>
+        <div class="basic-data">
+            <div class="overview">
+                <div class="posts">
+                    <div class="title">POSTS</div>
+                    <div class="data">
+                        <span class="data-inner">{{ counts["post"] }}</span>
+                        <span>篇</span>
+                    </div>
+                </div>
+                <div class="notes">
+                    <div class="title">NOTES</div>
+                    <div class="data">
+                        <span class="data-inner">{{ counts["note"] }}</span>
+                        <span>条</span>
+                    </div>
+                </div>
+                <div class="users">
+                    <div class="title">USERS</div>
+                    <div class="data">
+                        <span class="data-inner">{{ counts["user"] }}</span>
+                        <span>位</span>
+                    </div>
+                </div>
+                <div class="daily">
+                    <div class="title">DAILY</div>
+                    <div class="data">
+                        <span class="data-inner">0</span>
+                        <span>条</span>
+                    </div>
+                </div>
+            </div>
+            <div class="basic-data-title">
+                <div class="title-box">
+                    <div class="title">详细数据</div>
+                    <div class="subtitle">Detail Data</div>
+                </div>
+            </div>
+            <div class="details">
+                <div class="posts">
+                    <div class="title">POSTS</div>
+                    <div class="data">
+                        <table>
+                            <thead>
+                                <th>标题</th>
+                                <th>时间</th>
+                                <th>标签</th>
+                                <th>操作</th>
+                            </thead>
+                            <tbody>
+                                {% for item in posts %}
+                                <tr>
+                                    <td>{{ item.title }}</td>
+                                    <td>{{ item.time }}</td>
+                                    <td>{{ item.tag }}</td>
+                                    <td>
+                                        <a href="/post/{{ item.pid }}">查看</a>
+                                        <a href="/modifyPost/{{ item.pid }}">修改</a>
+                                        <a name="{{ item.pid }}" class="deletePost">删除</a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
-                        <td>
-                            <a href="/post/{{ post.pid }}">查看</a>
-                            <span>|</span>
-                            <a href="/modifyPost/{{ post.pid }}">修改</a>
-                            <span>|</span>
-                            <a href=/deletePost/{{ post.pid }}>删除</a>
-                        </td>
-                    </tr>
-                    {% endfor%}
+                <div class="notes">
+                    <div class="title">NOTES</div>
+                    <div class="data">
+                        <table>
+                            <thead>
+                                <th>标题</th>
+                                <th>内容</th>
+                                <th>操作</th>
+                            </thead>
+                            <tbody>
+                                {% for item in notes %}
+                                <tr>
+                                    <td>{{ item.title }}</td>
+                                    <td>{{ item.content }}</td>
+                                    <td>
+                                        <a href="">查看</a>
+                                        <a href="">修改</a>
+                                        <a name="{{ item.pid }}" class="deleteNote">删除</a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="users">
+                    <div class="title">USERS</div>
+                    <div class="data">
+                        <table>
+                            <thead>
+                                <th>用户名</th>
 
-                </tbody>
-            </table>
+                            </thead>
+                            <tbody>
+                                {% for item in users %}
+                                <tr>
+                                    <td>{{ item.username }}</td>
+
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="users">
+                    <div class="title">DAILY</div>
+                    <div class="data">
+                        <table>
+                            <thead>
+                                <th>标题</th>
+                                <th>时间</th>
+                                <th>标签</th>
+                                <th>操作</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Hello World</td>
+                                    <td>2018-9-10</td>
+                                    <td>日记</td>
+                                    <td>
+                                        <a href="">查看</a>
+                                        <a href="">修改</a>
+                                        <a href="">删除</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <script>
-$(document).ready(function(){
-    $("input[name='keleyicom']")
-});
+        $(document).ready(function(){
+           $(".deletePost").click(function(){
+               var pid = $(this).attr("name");
+               $.post("/deletePost",{
+                  deletePid:pid
+               });
+               $(this).parents("tr").remove();
 
-</script>
+           });
+           $(".deleteNote").click(function(){
+               var pid = $(this).attr("name");
+               $.post("/deleteNote",{
+                  deletePid:pid
+               });
+               $(this).parents("tr").remove();
+
+           });
+
+        });
+
+
+    </script>
 {% endblock %}
