--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,4 +1,5 @@
 <nav class="public-nav">
+    <div class="nav-group-1">
         <div class="nav-menu-phone">
             <img src="{{url_for('static',filename='img/Menu.svg')}}" alt="">
         </div>
@@ -6,13 +7,16 @@
             <div class="title">
                 <a href="/">
                     <img src="{{url_for('static',filename='img/郵件.svg')}}" alt="">
-                    Yarnom'Blog-
+                    Yarnom'Blog
                 </a>
             </div>
         </div>
         <div class="nav-notes-phone">
             <img src="{{url_for('static',filename='img/表单 (1).svg')}}" alt="">
         </div>
+    </div>
+
+
     <div class="nav-menu">
         <ul>
             <li><a href="/">
