--- a/app/sass/admin/admin-page.scss
+++ b/app/sass/admin/admin-page.scss
@@ -113,3 +113,120 @@
         }
     }
 }
+// Mobile Phone
+@media only screen and (max-width: 767px) {
+    .page-home{
+        padding:0 3em;
+        .application-main{
+            .basic-data-title{
+                margin-top: 3em;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .title-box{
+                    .subtitle{
+                        font-size: 12px;
+                        font-weight: bold;
+                        color: #7c8188;
+                    }
+                    .title{
+                        font-size: 18px;
+                        font-weight: bold;
+                    }
+                }
+                .new-post{
+                    display: flex;
+                    align-items: center;
+                    background-color: #206bc4;
+                    padding: 7px 10px;
+                    color: white;
+                    border-radius: 5px;
+                    img{
+                        height: 16px;
+                        width: 16px;
+                        color:white;
+                    }
+                    .text{
+                        display: none;
+                    }
+                }
+            }
+            .basic-data{
+                display: flex;
+                flex-direction: column;
+                margin-top:2em;
+                .overview{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    .posts,.notes,.users,.daily{
+                        padding: 1em 1em;
+                        margin:0.3em 0;
+                        border:1px solid #eee;
+                        border-radius: 5px;
+                        background-color: white;
+                        .title{
+                            font-size:10px;
+                            font-weight: bold;
+                            letter-spacing: 1.2px;
+                            color:#7c8188;
+
+                        }
+                        .data{
+                            display: flex;
+                            justify-content:space-between;
+                            font-size:15px;
+                            .data-inner{
+                                font-size:30px;
+                            }
+                        }
+
+                    }
+
+                }
+            }
+            .details{
+
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                flex-wrap: wrap;
+
+                margin-top:2em;
+                .notes,.posts,.users,.daily{
+                    width:100%;
+                    padding: 1em 1em;
+                    margin:0 0 1em 0;
+                    border:1px solid #eee;
+                    border-radius: 5px;
+                    background-color: white;
+                    min-height:12em;
+                    overflow: auto;
+                    .title{
+                        font-size:10px;
+                        font-weight: bold;
+                        letter-spacing: 1.2px;
+                        color:#7c8188;
+
+                    }
+                    .data{
+                        table{
+                            margin-top:1em;
+                            width:100%;
+                            font-size:14px;
+                            text-align: left;
+                            tr{
+                                td{
+                                    .deletePost{
+                                        cursor: pointer;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+            }
+        }
+    }
+}
