--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -11,7 +11,9 @@
             <div class="new-post-box">
                 <a class="new-post" href="/new-post">
                     <img src="{{ url_for('static',filename='img/添加 (1).svg') }}" alt="">
-                    新建一篇文章
+                    <div class="text">
+                        新建一篇文章
+                    </div>
                 </a>
             </div>
         </div>
