--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -89,14 +89,14 @@
                         <table>
                             <thead>
                                 <th>标题</th>
-                                <th>内容</th>
+                                <th>时间</th>
                                 <th>操作</th>
                             </thead>
                             <tbody>
                                 {% for item in notes %}
                                 <tr>
                                     <td>{{ item.title }}</td>
-                                    <td>{{ item.content }}</td>
+                                    <td>{{ item.time }}</td>
                                     <td>
                                         <a href="">查看</a>
                                         <a href="">修改</a>
